<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <ImageView
        android:id="@+id/back"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_marginTop="50dp"
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectLanguage"
        android:textSize="20sp"
        android:layout_below="@id/back"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"/>

    <RadioGroup
        android:id="@+id/radioGroupLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/radioButtonEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioButtonKhmer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/khmer"/>
    </RadioGroup>

    <Button
        android:id="@+id/buttonApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:layout_below="@id/radioGroupLanguage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"/>
</RelativeLayout>