<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="loginView"
            type="kh.edu.rupp.ite.movies.viewmodel.FavoriteViewModel" />
    </data>
    <FrameLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/login"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/login"
                    app:layout_constraintTop_toBottomOf="@+id/login">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enter_email"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_edit_text"
                        android:gravity="center_vertical"
                        android:hint="@string/email"
                        android:paddingStart="15dp"
                        android:textSize="16dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/enter_pass"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_edit_text"
                        android:gravity="center_vertical"
                        android:hint="@string/pass"
                        android:inputType="textPassword"
                        android:paddingStart="15dp"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="end"
                        android:text="@string/forget_pass"
                        android:textColor="@color/bg_edit_text"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                    <EditText
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="50dp"
                        android:background="@drawable/bg_edit_text"
                        android:backgroundTint="@color/red"
                        android:editable="false"
                        android:gravity="center"
                        android:hint="@string/login"
                        android:paddingStart="15dp"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/login"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/donthaveAcc"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_gravity="center"
                            android:id="@+id/txtSignup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginBottom="50dp"
                            android:text="@string/registernow"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </FrameLayout>

</layout>