<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginStart="10dp"
    android:layout_marginVertical="10dp">

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="20dp"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            app:cardBackgroundColor="@color/red"
            android:id="@+id/card">
            <TextView
                android:text="All"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:paddingHorizontal="20dp"
                android:background="@drawable/bg_rounded"
                android:textColor="@color/red"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/hollywood_filter"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/white">
            <TextView
                android:text="@string/hollywood"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:background="@drawable/bg_rounded"
                android:textColor="@color/white"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/bollywood_filter"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/white">
            <TextView
                android:text="@string/bollywood"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:background="@drawable/bg_rounded"
                android:textColor="@color/white"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginHorizontal="10dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/white">
            <TextView
                android:text="@string/account"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:background="@drawable/bg_rounded"
                android:textColor="@color/white"/>
        </androidx.cardview.widget.CardView>
</LinearLayout>